fixed dots size and spacing

--- a/src/others/ImageSlider.css
+++ b/src/others/ImageSlider.css
@@ -29,13 +29,14 @@
 
 .dot {
   display: inline-block;
-  width: 12px;
-  height: 12px;
+  width: 8px;
+  height: 8px;
   background-color: #bbb;
   border-radius: 50%;
-  margin: 0 5px;
+  margin: 0 15px;
   cursor: pointer;
   transition: background-color 0.3s;
+  
 }
 
 .dot.active {
